--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "keycloak-js": "^13.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
