--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3.8"
+version: '3.8'
 
 services:
-
   react-app:
     container_name: rrk-test1
     build:
@@ -22,10 +21,10 @@ services:
     environment:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
-      - KEYCLOAK_IMPORT=./realm-import.json
+      - KEYCLOAK_IMPORT=/temp/realm-import.json
       - DB_VENDOR=H2
     volumes:
-      - ./data/keycloak:/tmp
+      - ./data/keycloak:/temp
 
 volumes:
   react-app-data:
